memperbaiki tampilan mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>IKA SMANSI</title>
     <!--style CSS-->
     <link rel="stylesheet" href="/css/style.css">
-    <!--BGoogle Fonts-->
+    <!--BGoogle Fondsdsdsnizam shdududisjduskskkkjdskdjsms-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -145,7 +145,7 @@ Selamat menikmati situs web kami!
         <div class="kontak-form">
             <div class="card">
                 <h3>Hubungi Kami</h3>
-                <form action="" method="POST">
+                <form name="kontak-ika" action="" method="POST">
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="text" name="email" id="email">
@@ -171,7 +171,7 @@ Selamat menikmati situs web kami!
                         <tbody>
                             <tr>
                                 <th>Email</th>
-                                <td>nizamsetiawan15@gmail.com</td>
+                                <td> <a href="https://mail.google.com/mail/u/0/?tf=cm&fs=1&to=nizamsetiawan15@gmail.com">nizamsetiawan15@gmail.com</a></td>
                             </tr>
                             <tr>
                                 <th>Linkedin</th>
@@ -218,5 +218,16 @@ Selamat menikmati situs web kami!
     </div>
 </footer>
 <script src="/js/script.js"></script>
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzOrZX9VvHz3ExIqxlsgRQYAaf6n--0wv9q7-QEXizBh-VWske_8n44iHyV8Hush43qJA/exec'
+    const form = document.forms['kontak-ika']
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => console.log('Success!', response))
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 </html>
